--- a/fuelphp/templates/deploy/bootstrap.php.erb
+++ b/fuelphp/templates/deploy/bootstrap.php.erb
@@ -1,5 +1,7 @@
 <?php
 
+// Template
+
 // Load in the Autoloader
 require COREPATH.'classes'.DIRECTORY_SEPARATOR.'autoloader.php';
 class_alias('Fuel\\Core\\Autoloader', 'Autoloader');
